# Joystick

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt  Joystick.hpp
include/joystick/: CMakeLists.txt  axis.hpp  button.hpp  callback.hpp  element.hpp  exception.hpp
include/joystick/mapping/: xbox.hpp
src/: CMakeLists.txt
src/macos/: Joystick.cpp
